# Walkscapes

./: .gitignore  deploy.sh
backend/: Cargo.toml  build.sh  test.sh
backend/src/: challenge.rs  challenge_templates.rs  field_extractors.rs  image.rs  main.rs  marker.rs  polygon.rs  record.rs  tls.rs  user_error.rs  utils.rs
backend/src/challenge/: database.rs  html.rs
backend/src/markup/: admin.rs  challenge.rs  challenge_list.rs  mod.rs  polygon.rs  polygon_editor.rs  polygon_modal.rs  record.rs  record_menu.rs  record_viewer.rs
backend/src/models/: challenge.rs  image.rs  login.rs  marker.rs  mod.rs  polygon.rs  record.rs
backend/src/models/database/: challenge.rs  image.rs  marker.rs  mod.rs  polygon.rs  record.rs
backend/src/models/database/utils/: field_extractors.rs
backend/src/record/: html.rs
backend/src/routes/: challenge.rs  image.rs  marker.rs  mod.rs  polygon.rs  record.rs  user_error.rs
backend/src/routes/admin_panel/: login.rs  mod.rs
backend/src/routes/admin_panel/ui_components/: challenge_list.rs  record_viewer.rs
backend/src/routes/json_api/: challenge.rs  image.rs  marker.rs  mod.rs  polygon.rs  record.rs
backend/src/routes/ui_components/: mod.rs  polygon_editor.rs  record_viewer.rs
frontend/: additional.js  asset-manifest.json  getDataFromDB.js  image.js  index.html  main.js  map.js  package.json  style.css  suggestions.html  table.js  uploadRecord.js
frontend/admin/: challenges.js  htmx_utils.js  init.js  load_map.js  login_form.css  new_challenge.html  panel.html  polygon_editor.js  polygon_modal.js  record.js  style.css  (+1 more)
(+48 files in other folders)
