[package]
name = "walkscapes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.4.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.34.0", features = ["full"] }
futures-util = "0.3.29"
actix-rt = "2.9.0"
actix-multipart = "0.6.1"
dotenv = "0.15.0"
maud = "0.25.0"
serde_urlencoded = "0.7.1"
